--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,83 @@ ul{
 button{
   cursor: pointer;
 }
+
+.container-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #4A6FA5;
+    padding: 0% 12px;
+}
+.login{
+    width: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 8px;
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
+    background-color: #DBE9EE;
+
+}
+.login-area{
+    width: 100%;
+    padding: 24px;
+    display: flex;
+    justify-content: center;
+    
+    
+}
+.login-area img{
+    width: 150px;
+    padding: 10px;
+    border-radius: 8px;
+
+}
+form{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+form h1{
+    font-size: 24px;
+    margin-bottom: 24px;
+    color: #4A6FA5;
+    text-align: center
+}
+form input{
+    margin-bottom: 8px;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #4A6FA5;
+    outline: none;
+    font-size: 16px;
+}
+form button{
+    margin-top: 8px;
+    padding: 8px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    background-color:  #4A6FA5;
+    color: #fff;
+    cursor: pointer;
+}
+.login a{
+    margin: 8px;
+    text-decoration: none;
+    color: #4A6FA5;
+    font-size: 16px;
+}
+.login .forgot{
+    margin: 0px;
+    text-decoration: none;
+    color: #4A6FA5;
+    font-size: 14px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
